--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-    "name": "TsLintRules",
-    "version": "1.0.0",
-    "description": "TSLint custom rules",
-    "main": "index.js",
-    "repository": {},
-    "scripts": {
-        "lint": "tslint ./src/**/*.ts ./test/**/*.ts",
-        "test": "tsc && jasmine ./dist/**/*.js"
-    },
-    "author": "Hugo <alhugone@gmail.com>",
-    "license": "MIT",
-    "devDependencies": {
-        "@types/jasmine": "^2.5.41",
-        "@types/node": "^7.0.5",
-        "jasmine": "^2.5.3",
-        "tslint": "^4.4.2",
-        "typescript": "^2.1.6"
-    }
+  "name": "tslint-strict-null-checks",
+  "version": "1.0.0",
+  "description": "TSLint rules for strictNullChecks",
+  "main": "index.js",
+  "repository": {},
+  "scripts": {
+    "lint": "tslint ./src/**/*.ts ./test/**/*.ts",
+    "test": "tsc && jasmine ./dist/**/*.js",
+    "test-coverage-generate": "tsc && istanbul cover --report lcovonly node_modules/jasmine/bin/jasmine.js ./dist/**/*.js",
+    "test-coverage-remap": " node ./node_modules/remap-istanbul/bin/remap-istanbul -i ./coverage/coverage.json -t lcovonly  -o ./coverage/lcov2.info",
+    "test-coverage-send": "cat coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js && rm ./coverage -fdr"
+  },
+  "author": "Hugo <alhugone@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/jasmine": "^2.5.41",
+    "@types/node": "^7.0.5",
+    "coveralls": "^2.12.0",
+    "jasmine": "^2.5.3",
+    "remap-istanbul": "^0.9.1",
+    "tslint": "^4.4.2",
+    "typescript": "^2.1.6"
+  }
 }
